<resources>
    <string name="app_name">Eternity Studio</string>
    <string name="logo">logo</string>
    <string name="EmailLogIn">Email</string>
    <string name="EmailSignUp">Email</string>
    <string name="PasswordLogIn">Password</string>
    <string name="PasswordSignUp">Password</string>
    <string name="LogInButtonText">Sign In</string>
    <string name="ForgotPasswordText">Forgot Password ?</string>
    <string name="LogInScreenSeparator">|</string>
    <string name="NewUserText">New User ?</string>
    <string name="SignUpButtonText">Sign Up</string>
    <string name="CopyrightText">© Eternity Solutions Corp. All Rights Reserved</string>
    <string name="ForgotUserIDText">Forgot User ID ?</string>
    <string name="ToDoText">TODO</string>
    <string name="WelcomeToEternityText">Welcome to Eternity Solutions</string>
    <string name="LogOutButtonText">Log Out</string>
    <string name="AlreadySignedUpText">Already Signed Up ? Click here to Sign In.</string>
    <string name="SignUpFullNameText">Full Name</string>
    <string name="SignUpPhoneNumberText">Phone</string>
    <string name="ProfilePicture">Profile Picture</string>
    <string name="ProfileNameTag">Name :</string>
    <string name="ProfileNameValue">Name</string>
    <string name="ProfileEmailValue">Email</string>
    <string name="ProfileEmailTag">Email :</string>
    <string name="ProfilePhoneTag">Phone :</string>
    <string name="ProfilePhoneValue">Phone</string>
    <string name="verifyAccountButtonText">Verify Account</string>
    <string name="verifyAccountMessageText">This account is not verified</string>
    <string name="MyProfileText">My Profile</string>
    <string name="WelcomeText">Welcome</string>
    <string name="ExclamationText">!</string>
    <string name="ThingsToDoText">What would you like to accomplish today ?</string>
    <string name="ActionButtonSetAndTrackHabitText">Set and Track a Habit</string>
    <string name="MyHabitsText">My Habits</string>
    <string name="HabitNameHintText">Enter HABIT Name here</string>
    <string name="SetHabitButtonText">Set The Habit</string>
    <string name="MainPage">My Home</string>
    <string name="viewHabitsButton">View Habits</string>
    <string name="setAHabitText">Set A Habit</string>
    <string name="goToSetHabitScreenButtonText">Set A Habit</string>
</resources>
