<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/verifyAccountButton"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="verifyAccount"
        android:text="@string/verifyAccountButtonText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/verificationMessage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/verifyAccountMessageText"
        android:textColor="#F44336"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/ProfilePhoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfilePhoneValue"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePhoneTag"
        app:layout_constraintTop_toBottomOf="@+id/ProfileEmailValue" />

    <TextView
        android:id="@+id/profilePhoneTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfilePhoneTag"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailTag" />

    <TextView
        android:id="@+id/profileEmailTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileEmailTag"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameTag" />

    <TextView
        android:id="@+id/ProfileEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileEmailValue"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileEmailTag"
        app:layout_constraintTop_toBottomOf="@+id/ProfileNameValue" />

    <TextView
        android:id="@+id/profileNameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileNameTag"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="544dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/CopyrightText"
        android:textColor="#CDCC00"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/myProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/MyProfileText"
        android:textColor="#000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:contentDescription="@string/ToDoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eternity_logo" />

    <ImageView
        android:id="@+id/ProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="170dp"
        android:contentDescription="@string/ProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfile"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/ProfileNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileNameValue"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileNameTag"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />


</androidx.constraintlayout.widget.ConstraintLayout>