<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/thingsToDoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ThingsToDoText"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />

    <TextView
        android:id="@+id/exclamationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ExclamationText"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/ProfileNameValue"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/verifyAccountButton"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="verifyAccount"
        android:text="@string/verifyAccountButtonText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/verificationMessage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/verifyAccountMessageText"
        android:textColor="#F44336"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="544dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/CopyrightText"
        android:textColor="#CDCC00"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:contentDescription="@string/ToDoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eternity_logo" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="signOut"
        android:text="@string/LogOutButtonText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/ProfilePic"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="170dp"
        android:contentDescription="@string/ProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/ProfileNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileNameValue"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/exclamationText"
        app:layout_constraintStart_toEndOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/WelcomeText"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/ProfileNameValue"
        app:layout_constraintStart_toEndOf="@+id/ProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/setAndTrackHabitsButton"
        android:layout_width="94dp"
        android:layout_height="77dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/upcjl"
        android:onClick="setAndTrackHabits"
        android:text="@string/ActionButtonSetAndTrackHabitText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thingsToDoText" />


</androidx.constraintlayout.widget.ConstraintLayout>