<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetAndTrackHabits">

    <Button
        android:id="@+id/viewHabitButton"
        style="@android:style/Widget.Button"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="viewHabits"
        android:text="@string/viewHabitsButton"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToSetHabitsScreenButton" />

    <TextView
        android:id="@+id/SetMyHabits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/MyHabitsText"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileNameValue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="592dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/CopyrightText"
        android:textColor="#CDCC00"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="47dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:contentDescription="@string/ToDoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eternity_logo" />

    <ImageView
        android:id="@+id/ProfilePic"
        android:layout_width="72dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/ProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/ProfileNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/ProfileNameValue"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />

    <Button
        android:id="@+id/goToSetHabitsScreenButton"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:fontFamily="@font/upcjl"
        android:onClick="goToSetHabits"
        android:text="@string/goToSetHabitScreenButtonText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetMyHabits" />


</androidx.constraintlayout.widget.ConstraintLayout>