<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background2"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="209dp"
        android:layout_height="94dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eternity_logo"
        android:contentDescription="@string/ToDoText" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/upcjl"
        android:hint="@string/EmailLogIn"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="37dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="294dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:fontFamily="@font/upcjl"
        android:hint="@string/PasswordLogIn"
        android:inputType="textPassword"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/LogInButton"
        style="@android:style/Widget.Button"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="65dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="completeSignIn"
        android:text="@string/LogInButtonText"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="32sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/ForgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="forgotPassword"
        android:text="@string/ForgotPasswordText"
        android:textColor="#CDCC00"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton" />

    <TextView
        android:id="@+id/ForgotUserIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:text="@string/ForgotUserIDText"
        android:textColor="#CDCC00"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton" />

    <TextView
        android:id="@+id/TextSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/LogInScreenSeparator"
        android:textColor="#CDCC00"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/ForgotPasswordText"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/ForgotUserIDText"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton" />

    <TextView
        android:id="@+id/TextNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/NewUserText"
        android:textColor="#CDCC00"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotUserIDText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:background="#CDCC00"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/upcjl"
        android:onClick="goToSignUp"
        android:text="@string/SignUpButtonText"
        android:textAllCaps="false"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordText" />

    <TextView
        android:id="@+id/TextCopyright"
        android:layout_width="330dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/upcjl"
        android:text="@string/CopyrightText"
        android:textAlignment="center"
        android:textColor="#CDCC00"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="37dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="visible"
        tools:ignore="UnknownIdInLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
